[project.urls]
"Homepage" = "https://github.com/mabel-dev/orso"
"Bug Tracker" = "https://github.com/mabel-dev/opteryx/issues"

[tool.setuptools.packages.find]
where = ["orso"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
src_paths = ["orso"]
extend_skip_glob = ["tests/**", "*.pyx"]
line_length = 100
multi_line_output = 9
force_single_line = true
float_to_top = true
