[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
src_paths = ["orso"]
extend_skip_glob = ["tests/**", "*.pyx"]
line_length = 100
multi_line_output = 9
force_single_line = true
float_to_top = true

[build-system]
requires = ["setuptools>=42", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = 'py310'

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
select = ["SIM", "NPY201"]
ignore = []